# TheGameRPG

./: .clangd  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  precompile_headers.cmake
client/: CMakeLists.txt  RpcHost.gd  TestClassGaming.gd  TestPeer.gd  project.godot  scene.tscn
client/gui/: LoginMenu.gd  LoginMenu.tscn
client/include/: ClientCore.hpp  EntityComponentsClient.hpp  EntityDataClient.hpp  GameClient.hpp  RealmClient.hpp  ServerRpcProxy.hpp
client/prefabs/: MovingEntity.gd  MovingEntity.tscn
client/src/: .ycm_extra_conf.py  ClientCore.cpp  EntityComponentsClient.cpp  GameClient.cpp  GameClientRpc.cpp  GameClient_bindRpc.cpp  RealmClient.cpp  ServerRpcProxy.cpp  game_client.gdextension
client/src/cpp/: ClientConnection.cpp  ClientConnection_rpc.cpp  Entities.cpp  EntityPrefabScript.cpp  UpdateTerrain.cpp  gdextension_registration.cpp
client/src/include/: ClientConnection.hpp  Entities.hpp  EntityPrefabScript.hpp  GodotGlm.hpp  Rpc.hpp
client/world/: WorldScene.tscn
common/: .ycm_extra_conf.py  CMakeLists.txt
common/include/: ClientRpcFunctionNames.hpp  CollisionFilters.hpp  CollisionLoader.hpp  CollisionShapeSerialization.hpp  CollisionWorld.hpp  CommonRpcFunctionNames.hpp  ComponentCharacterSheet.hpp  ComponentInventory.hpp  ComponentsUtility.hpp  EntityBase.hpp  EntityComponents.hpp  EntityData.hpp  EntityEvent.hpp  EntityGameComponents.hpp  EntityShape.hpp  EntityStorage.hpp  EntitySystems.hpp  ForwardDeclarations.hpp  GlmBullet.hpp  GlmSerialization.hpp  Realm.hpp  RealmBase.hpp  RegistryComponent.hpp  RegistryComponent.inl.hpp  ServerRpcFunctionNames.hpp  StatsCollector.hpp  ThreadSafeValue.hpp  Tick.hpp  TickTimer.hpp  Timer.hpp
common/src/: BulletMultiRaySweep.cpp  BulletMultiSphereSweep.cpp  BulletPhysicsCallbacks.hpp  BulletRayTests.cpp  CollisionLoader.cpp  CollisionShapeSerialization.cpp  CollisionWorld.cpp  ComponentCharacterSheet.cpp  ComponentInventory.cpp  EntityBase.cpp  EntityComponents.cpp  EntityEvent.cpp  EntitySystems.cpp  GlmSerialization.cpp  Realm.cpp  RealmBase.cpp  RegistryComponent.cpp  StatsCollector.cpp  Tick.cpp  TickTimer.cpp
common/src/bullet/: BulletCylinderSweep.cpp  BulletMultiRaySweep.cpp  BulletMultiSphereSweep.cpp  BulletPhysicsCallbacks.hpp  BulletRayTests.cpp  TriggerBoxTest.cpp  bulletShapeTestsForEntities.cpp
common/src/collision_tests/: BulletMultiSphereSweep.cpp  BulletPhysicsCallbacks.hpp  BulletRayTests.cpp  TestCollisionMovement.cpp  TriggerBoxTest.cpp
frontend/: .gitignore  CMakeLists.txt  project.godot
frontend/addons/kenney_particle_pack/: circle_01.png.import  (+79 more)
frontend/assets/: HeightMap.tscn  HeightMapRenderer.gdshader  HeightMapRenderer.gdshader.uid  TeleporterEffect.gdshader  TeleporterEffect.gdshader.uid  TeleporterEffect.tscn  height_map_renderer.gd  height_map_renderer.gd.uid
frontend/game_client/: ClientConnection.cpp  EntityPrefabScript.cpp  gdextension_registration.cpp
frontend/game_frontend/: AsyncLoadedPlaceholder.cpp  AsyncLoadedPlaceholder.hpp  ComponentMeshHeightmap.cpp  ComponentMeshHeightmap.hpp  EntityComponentsFrontend.cpp  EntityComponentsFrontend.hpp  EntityDataFrontend.hpp  EntityPrefabScript.cpp  EntityPrefabScript.hpp  EntityStaticPrefabScript.cpp  EntityStaticPrefabScript.hpp  GameClientFrontend.cpp  GameClientFrontend.hpp  GameFrontend.cpp  GameFrontend.hpp  GodotGlm.hpp  NodeRemoverAfterTimer.cpp  NodeRemoverAfterTimer.hpp  game_frontend.gdextension  game_frontend.gdextension.uid  gdextension_registration.cpp
frontend/gui/: ConnectionState.gd  ConnectionState.gd.uid  FullUIContainer.tscn  GuiSelectorManager.gd  Help.gd  Help.gd.uid  Help.tscn  Hud.gd  Hud.gd.uid  Hud.tscn  LoginFailed.tscn  LoginMenu.gd  LoginMenu.tscn  MainMenu.gd  MainMenu.gd.uid  MainMenu.tscn  PingValue.gd  PingValue.gd.uid  PrintPosition.gd  PrintPosition.gd.uid  Settings.gd  Settings.gd.uid  Settings.tscn  UI.gd  UI.gd.uid  UI.tscn
frontend/icon7/: icon7.gdextension
frontend/prefabs/: EntityStaticPrefabScript.gd  EntityStaticPrefabScript.tscn  MovingEntity.gd  MovingEntity.gd.uid  MovingEntity.tscn  StaticEntity.gd  StaticEntity.gd.uid  StaticEntity.tscn
frontend/scripts/: GameFrontendScript.gd  GameFrontendScript.gd.uid  GodotClientConnection.gd  RpcHost.gd
frontend/tests/: test_animation.gd  test_animation.gd.uid  test_animation.gdshader  test_animation.gdshader.uid  test_animation.scn  test_animation.tscn  test_animation_material.tres  test_mesh_prefab.tscn
frontend/tools/: GameEditorConfigScript.gd  GameEditorConfigScript.gd.uid  MergeFbxs.gd.uid
frontend/world/: WorldScene.tscn
server/: .ycm_extra_conf.py  CMakeLists.txt  ServerMain.cpp
server/include/: ClientRpcFunctionNames.hpp  ClientRpcProxy.hpp  CollisionWorld.hpp  CommandParser.hpp  ComponentCallbackRegistry.hpp  ComponentCallbacks.hpp  ConfigStorage.hpp  DBStatement.hpp  DBWorker.hpp  Entity.hpp  EntityComponentsServer.hpp  EntityDataServer.hpp  EntityGameComponents.hpp  EntityNetworkingSystems.hpp  EntityServer.hpp  FileOperations.hpp  FunctorCommands.hpp  GameLogic.hpp  PeerData.hpp  PeerStateTransitions.hpp  Realm.hpp  RealmServer.hpp  RealmServer.inl.hpp  RealmWorkThreadedManager.hpp  ServerCore.hpp  SharedObject.hpp  StringUtil.hpp  TerrainMap.hpp  Timer.hpp
server/scripts/: BigHeader.hpp
server/src/: ClientRpcProxy.cpp  CollisionLoader.cpp  CommandParser.cpp  CommandParser_Commands.cpp  ComponentCallbackRegistry.cpp  ComponentCallbacks.cpp  ConfigStorage.cpp  DBStatement.cpp  DBWorker.cpp  Entity.cpp  EntityComponentServer.cpp  EntityGameComponents.cpp  EntityNetworkingSystems.cpp  EntityServer.cpp  FileOperations.cpp  GameLogic.cpp  Main.cpp  PeerStateTransitions.cpp  Realm.cpp  RealmServer.cpp  RealmServer_EntityActionAttack.cpp  RealmServer_EntityActions.cpp  RealmServer_Observers.cpp  RealmServer_Observers_CharacterSheet.cpp  RealmServer_Serialization.cpp  RealmServer_networking.cpp  RealmWorkThreadedManager.cpp  ServerCore.cpp  ServerCore_InputCommands.cpp  ServerCore_bindRpc.cpp  ServerCore_init.cpp  ServerCore_rpc.cpp  SharedObject.cpp  StringUtil.cpp  TerrainMap.cpp
(+394 files in other folders)
